<resources>
    <string name="app_name" translatable="false">KidMD</string>
    <string name="kidmd_logo" translatable="false">KidMD Logo</string>
    <string name="create_account">Create account</string>
    <string name="login">Log in</string>
    <string name="sign_up">Sign up</string>
    <string name="cancel">Cancel</string>
    <string name="name">Name</string>
    <string name="age">Age</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="guest">Continue as guest</string>
    <string name="string_button">Back Button</string>
    <string name="search_button">Search Button</string>
    <string name="anatomy">Anatomy</string>
    <string name="anatomy_button">Anatomy button</string>
    <string name="procedures">Procedures</string>
    <string name="procedures_button">Procedures button</string>
    <string name="Tools">Tools</string>
    <string name="tools_button">Tools button</string>
    <string name="profile">Profile Search</string>
    <string name="profile_button">Profile button</string>
    <string name="notifications">Notifications</string>
    <string name="notifications_button">Notifications button</string>
    <string name="additional_resources">Resources</string>
    <string name="additional_resources_button">Additional Resources button</string>
    <string name="hospital">Hospital</string>
    <string name="hospital_button">Hospital button</string>
    <string name="sounds">Sounds</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="appendix">Appendix</string>
    <string name="appendix_description">The appendix is a thin tube attached near the meeting point of the small and large intestine. Its function is still under study but it is not necessary to health.</string>
    <string name="brain">Brain</string>
    <string name="brain_description">A brain is the control center of the body. It controls the body’s movements and activities. It is also the center of thought, memory, and feelings.</string>
    <string name="clavicle">Clavicle</string>
    <string name="clavicle_description">The clavicle, also called the collarbone, is a bone that connects the sternum to the shoulder. It is one of the most common bones to break.</string>
    <string name="distalRadius">Distal Radius</string>
    <string name="distalRadius_description">The distal radius is the end part of the arm bones that are connected to the wrist. Fractures to this area are very common.</string>
    <string name="gallbladder">Gallbladder</string>
    <string name="gallbladder_description">The gallbladder is a sac that takes bile made in the liver and stores it. The bile is released to the small intestines to help digest food.</string>
    <string name="kidneys">Kidneys</string>
    <string name="kidneys_description">The kidneys are a pair of organs that remove waste from the body by filtering the blood. The waste gets turned into urine and sent down to the bladder.</string>
    <string name="liver">Liver</string>
    <string name="liver_description">The liver is an organ that filters the blood that comes from the digestive track. It breaks down the toxins from chemicals and drugs. It also makes important proteins the body needs.</string>
    <string name="lungs">Lungs</string>
    <string name="lungs_description">The lungs are two organs in the chest that help you breathe. They take in the oxygen sent to them and spread it throughout the blood.</string>
    <string name="spleen">Spleen</string>
    <string name="spleen_description">The spleen is an organ near the stomach. It recycles old blood cells, stores white blood cells, and filters the blood.</string>
    <string name="tonsils">Tonsils</string>
    <string name="tonsils_description">Tonsils are the two balls of tissue at the back of the throat. They can stop bacteria and viruses from entering the body and create white blood cells to fight them.</string>
    <string name="diathermy">Diathermy</string>
    <string name="diathermy_description">Diathermy is an electrosurgical tool, meaning it needs electricity to do its job. It creates heat using electricity, and on certain settings can be used to relax muscles.</string>
    <string name="diathermy_use">Diathermy is used in physical therapy and in surgery. It can be used to cut into parts of your body that are making you sick, or to stop blood vessels from bleeding.</string>
    <string name="forceps">Forceps</string>
    <string name="forceps_description">Forceps are a metallic instrument with a hinge, able to grasp and hold objects. They are more precise than fingers, and are often used when a doctor needs his or her hands free for other tasks.</string>
    <string name="forceps_use">During surgery, forceps are used to grasp tissue in your body so that doctors can get to the areas that are making you sick and fix them. They are designed to securely hold tissue so that they do not hurt you.</string>
    <string name="retractors">Retractors</string>
    <string name="retractors_description">Retractors are a metallic tool with an angled blade. Once the instrument is in place, it maintains the position desired by the surgeon. They can be handheld or perched on the end of a robotic arm.</string>
    <string name="retractors_use">While forceps are used to pull back tissue, retractors are used to hold tissue in place, making it easier for surgeons to see and access the places they need to work on.</string>
    <string name="suctionTube">Suction Tube</string>
    <string name="suctionTube_description">Suction Tube devices are either mechanical hand pumps or electrical/battery-powered mechanisms connected to plastic tubing with a rigid tip, the Yankauer suction tip.</string>
    <string name="suctionTube_use">Suction tubes are used by surgeons to remove harmful stuff from your body during surgery, or to remove stuff that makes it hard for surgeons to see to do their work.</string>
    <string name="sutures">Sutures</string>
    <string name="sutures_description">Sutures are like thread. In the same way thread holds your clothes together, sutures hold your skin together after doctors have fixed what\'s making you sick. Some even dissolve on their own, without having to be removed.</string>
    <string name="sutures_use">Sutures are generally applied with a needle, and the choice of which sutures to use can be complex. Depending on the tissue being held together and the forces applied by the wound, surgeons must choose sutures of proper strength and elasticity.</string>
    <string name="defibrillators">Defibrillators</string>
    <string name="defibrillators_description">Defibrillators are tools you have probably seen used on TV, and they were probably used incorrectly in those portrayals. They are electric paddles used to restore the normal rhythm of your heart, not to restart the heart after cardiac arrest, as is often shown.</string>
    <string name="defibrillators_use">It is very unlikely that you will ever need to have this tool used on you, but it is important to know it is there just in case! In the image above, you can see the woman making a point of avoiding contact with the man being defibrillated. This is also why they yell \"Clear!\" on TV: so that the electrical current doesn\'t go where it\'s not supposed to.</string>
    <string name="anesthesia">Anesthesia</string>
    <string name="anesthesia_description">Anesthesia machines use a measured, steady supply of medical gases to ensure your surgery is completely painless. These advanced machines track all of your vital signs so that you get the correct amount of gas.</string>
    <string name="anesthesia_use">Prior to surgery, your doctor will place a plastic mask over your nose and mouth, and then tell you to count backwards from 10. You probably won\'t get far past number 7, because your body will have absorbed the gases through your lungs, and you will be deep, deep asleep! When you wake up, the surgery will be over, and you will be better!</string>
    <string name="stethoscope">Stethoscope</string>
    <string name="stethoscope_description">Stethoscopes are probably the most famous medical device, seen in many cartoons and movies. These devices allow doctors to listen to your heart, lungs, and even sounds in your stomach!</string>
    <string name="stethoscope_use">Like the Sphygmomanometer (the blood pressure cuff), these devices are quite common and part of your regular check-up during your doctor visit, and will also likely be used before surgery to avoid complications. Aside from possibly cold metal against your skin, there is nothing to worry about!</string>
    <string name="sphygmomanometer">Sphygmomanometer</string>
    <string name="sphygmomanometer_description">If attempting to pronounce this word intimidates you, don\'t worry, you\'re not alone. This device checks your blood pressure using an inflated cuff and mercury. The result will be 2 numbers like: xx/yy. The left number describes your heart\'s contraction pressure; the right, its relaxation pressure.</string>
    <string name="sphygmomanometer_use">This tool is so common, you will likely see it during every regular office visit. It is part of your doctor\'s basic toolkit for keeping you healthy. It is also used immediately before surgery to make sure there will be no complications. You will feel a squeeze from the cuff, a pause, then it will relax and it is done.</string>
    <string name="penTorch">Pen Torch</string>
    <string name="penTorch_description">Pen Torches, as their name implies, look like pens, but are equipped with a powerful flashlight. Your doctor uses these devices to check the pupillary response from your eyes, and also to check your nose and mouth, to make sure you are healthy.</string>
    <string name="penTorch_use">Along with the Stethoscope and the Sphygmomanometer (the blood pressure cuff), this device is among the most common in your doctor\'s tool belt. Expect to see it during regular office visits and check-ups, and to have your doctor ask you to follow his finger with your eyes as the light peers into your pupils, ensuring the health of your eyes.</string>
    <string name="xray">X-ray Machine</string>
    <string name="xray_description">X-ray Machines are devices with a generator which holds a vacuum tube, directing a stream of electrons which are collected by another device to form images of your internal body. 99% of the energy used is released as heat, and only 1% goes towards the X-rays!</string>
    <string name="xray_use">You have probably encountered X-ray machines before, at the dentist. You will stand or lie on a table and have a cover placed over you to prevent excess radiation (small amounts do not hurt!). The technician will then move back so as be out of range, and then the internal image is taken. It is not so different from having your picture taken.</string>
    <string name="Ctscan">CT Scan Machine</string>
    <string name="Ctscan_description">CT stands for Computed Tomography. They are often pronounced as \"cat\" scans. These devices make use of a rotating X-ray tube and a series of detectors. Like regular X-rays, they show doctors the inside of your body.</string>
    <string name="what_happens">WHAT WILL HAPPEN DURING SURGERY?</string>
    <string name="choledochalCystRemoval">Choledochal Cyst Removal</string>
    <string name="desc_choledochalCystRemoval">You will go to sleep. The doctor will make small cuts near your belly button. They may put a camera inside to see your organs inside. The doctor puts some gas in your belly so they can see your organs better. Then they will use some special tools to remove the cyst from the tube. The doctor will re-build the tube by using a small section of the intestine. Now everything will be good and the doctor will close your belly and you will wake up.</string>
</resources>