<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#efefef">

    <ScrollView
        android:id="@+id/menuBackground"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#efefef"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="1dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="65dp">

            <include layout="@layout/toolbar" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/banner"
                android:layout_width="350dp"
                android:layout_height="150dp"
                android:layout_marginTop="80dp"
                android:background="@drawable/main_banner_r"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:hardwareAccelerated="false"
                android:largeHeap="true"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/bodypartbutton"
                android:layout_width="170dp"
                android:layout_height="170dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/main_anatomy_r"
                android:contentDescription="@string/anatomy_button"
                android:text="@string/anatomy"
                android:textColor="#219BA3"
                android:textSize="20sp"
                app:layout_constraintHorizontal_bias="0.10"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/banner"
                android:hardwareAccelerated="false"
                android:largeHeap="true"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/procedurebutton"
                android:layout_width="170dp"
                android:layout_height="170dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/main_procedures_r"
                android:contentDescription="@string/procedures_button"
                android:text="@string/procedures"
                android:textColor="#219BA3"
                android:textSize="20sp"
                app:layout_constraintLeft_toRightOf="@id/bodypartbutton"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/banner"
                android:hardwareAccelerated="false"
                android:largeHeap="true"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/toolsbutton"
                android:layout_width="170dp"
                android:layout_height="170dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/main_tools_r"
                android:contentDescription="@string/tools_button"
                android:text="@string/Tools"
                android:textColor="#219BA3"
                android:textSize="20sp"
                app:layout_constraintHorizontal_bias="0.10"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/bodypartbutton"
                android:hardwareAccelerated="false"
                android:largeHeap="true"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/soundsbutton"
                android:layout_width="170dp"
                android:layout_height="170dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/main_sounds_r"
                android:contentDescription="@string/tools_button"
                android:text="@string/sounds"
                android:textColor="#219BA3"
                android:textSize="20sp"
                app:layout_constraintLeft_toRightOf="@id/toolsbutton"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/procedurebutton"
                android:hardwareAccelerated="false"
                android:largeHeap="true"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/hospitalbutton"
                android:layout_width="170dp"
                android:layout_height="170dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/main_hospital_r"
                android:contentDescription="@string/hospital_button"
                android:text="@string/hospital"
                android:textColor="#ffffff"
                android:textSize="20sp"
                app:layout_constraintHorizontal_bias="0.10"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/toolsbutton"
                android:hardwareAccelerated="false"
                android:largeHeap="true"/>

            <!--android:background="@drawable/rounded_corner"-->
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/resourcebutton"
                android:layout_width="170dp"
                android:layout_height="170dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/main_resources_r"
                android:contentDescription="@string/additional_resources_button"
                android:text="@string/additional_resources"
                android:textColor="#219BA3"
                android:textSize="20sp"
                app:layout_constraintLeft_toRightOf="@id/hospitalbutton"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/soundsbutton"
                android:hardwareAccelerated="false"
                android:largeHeap="true"/>

            <!--android:background="@drawable/rounded_corner"-->
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/notificationbutton"
                android:layout_width="350dp"
                android:layout_height="80dp"
                android:layout_marginTop="15dp"
                android:background="@color/white"
                android:contentDescription="@string/notifications_button"
                android:text="@string/notifications"
                android:textColor="#219BA3"
                android:textSize="20sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/resourcebutton"
                android:hardwareAccelerated="false"
                android:largeHeap="true"/>

            <!--android:background="@drawable/rounded_corner"-->
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/settingsbutton"
                android:layout_width="350dp"
                android:layout_height="80dp"
                android:layout_marginTop="15dp"
                android:background="@color/white"
                android:text="@string/settings"
                android:textColor="#219BA3"
                android:textSize="20sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/notificationbutton"
                android:hardwareAccelerated="false"
                android:largeHeap="true"/>

            <!--android:background="@drawable/rounded_corner"-->
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/profilesearchbutton"
                android:layout_width="350dp"
                android:layout_height="80dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/profilesearch"
                android:contentDescription="@string/profile_button"
                android:text="@string/profile"
                android:textColor="#ffffff"
                android:textSize="20sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/settingsbutton"
                android:hardwareAccelerated="false"
                android:largeHeap="true"/>

            <!--android:background="@drawable/rounded_corner"-->
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/logout"
                android:layout_width="350dp"
                android:layout_height="80dp"
                android:layout_marginTop="15dp"
                android:background="@color/white"
                android:text="@string/logout"
                android:textColor="#219BA3"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/profilesearchbutton"
                android:hardwareAccelerated="false"
                android:largeHeap="true"/>


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
    <include layout="@layout/bottom_toolbar" />
</androidx.constraintlayout.widget.ConstraintLayout>
