<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignIn">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/signInCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/cancel"
        android:textAllCaps="false"
        android:textColor="#66c9eb"
        android:textSize="20sp" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/signInLogo"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/kidmd_logo"
        app:srcCompat="@drawable/logo" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/signIn_email"
        android:layout_width="330dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/signInLogo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textSize="24sp" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/signIn_password"
        android:layout_width="330dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/signIn_email"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textSize="24sp" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/forgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/signIn_password"
        android:layout_alignEnd="@id/signIn_password"
        android:text="@string/forgot_password"
        android:textAllCaps="false"
        android:textSize="16sp"
        android:textStyle="bold"
        android:textColor="#66c9eb"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/login"
        android:layout_width="330dp"
        android:layout_height="70dp"
        android:layout_below="@id/forgotPassword"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:backgroundTint="#66c9eb"
        android:text="@string/login"
        android:textAllCaps="false"
        android:textColor="#ffffff"
        android:textSize="26sp"
        android:textStyle="bold" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/guest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="40dp"
        android:text="@string/guest"
        android:textAllCaps="false"
        android:textColor="#c3c3c3"
        android:textSize="20dp"
        android:textStyle="bold" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone"
        tools:ignore="MissingConstraints"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />

</RelativeLayout>