<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUp">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/signInLogo"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="70dp"
        android:background="@android:color/transparent"
        app:srcCompat="@drawable/logo"
        android:contentDescription="@string/kidmd_logo"
        />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/name"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/signInLogo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/name"
        android:inputType="text"
        android:textSize="24sp" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/age"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/name"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:hint="@string/age"
        android:inputType="number"
        android:textSize="24sp" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/email"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/age"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textSize="24sp" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/password"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/email"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textSize="24sp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/registerUser"
        android:layout_width="320dp"
        android:layout_height="70dp"
        android:layout_below="@id/password"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:backgroundTint="#66c9eb"
        android:text="@string/sign_up"
        android:textAllCaps="false"
        android:textColor="#ffffff"
        android:textSize="26sp"
        android:textStyle="bold" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone"
        tools:ignore="MissingConstraints"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />

</RelativeLayout>