<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/pr_background"
    tools:context=".prAppendectomy">
    <include layout="@layout/bottom_toolbar" />

    <TextView
        android:id="@+id/choledochalCyst"
        android:layout_width="320dp"
        android:layout_height="85dp"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/choledochalCystRemoval"
        android:textColor="#219BA3"
        android:textSize="37sp"
        android:textStyle="bold"
        app:layout_constraintHorizontal_bias="0.483"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/prCholCystTitle"
        android:layout_width="265dp"
        android:layout_height="68dp"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="@string/what_happens"
        android:textColor="#000000"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cholCystPic2" />

    <TextView
        android:id="@+id/prCholCystDesc"
        android:layout_width="317dp"
        android:layout_height="318dp"
        android:layout_marginTop="8dp"
        android:text="@string/desc_choledochalCystRemoval"
        android:textColor="#000000"
        android:textSize="17sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/prCholCystTitle" />

    <ImageView
        android:id="@+id/cholCystPic2"
        android:layout_width="303dp"
        android:layout_height="219dp"
        android:layout_marginTop="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/choledochalCyst"
        app:srcCompat="@drawable/cholcystpic3" />

    <ImageButton
        android:id="@+id/cholCystPage2Next"
        android:layout_width="50dp"
        android:layout_height="59dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="40dp"
        android:background="@android:color/transparent"
        app:layout_constraintBottom_toTopOf="@id/prCholCystDesc"
        app:layout_constraintHorizontal_bias="0.994"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:srcCompat="@drawable/grayed_right_arrow" />

    <ImageButton
        android:id="@+id/cholCystPage2Back"
        android:layout_width="50dp"
        android:layout_height="59dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="40dp"
        android:background="@android:color/transparent"
        app:layout_constraintBottom_toTopOf="@id/prCholCystDesc"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:srcCompat="@drawable/green_left_arrow" />

    <ImageButton
        android:id="@+id/cholCystPage2X"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginBottom="64dp"
        android:background="@android:color/transparent"
        app:layout_constraintBottom_toTopOf="@id/cholCystPic2"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:srcCompat="@drawable/x_button" />

</androidx.constraintlayout.widget.ConstraintLayout>